Revert "add save collusion transform and fix visibility"
This reverts commit 6df60db79179187676cc49a2b1c5c9ac0f94dc0d.

--- a/styles/main.css
+++ b/styles/main.css
@@ -178,8 +178,7 @@ canvas {
 
 .transform-buttons {
     display: flex;
-    flex-wrap: wrap;
-    gap: 2px;
+    gap: 5px;
     margin-top: 10px;
 }
 
